adding design system html file as well as more css

--- a/index.html
+++ b/index.html
@@ -14,6 +14,15 @@
 <body>
     <div class="container">
         <h1>Design system</h1>
+        <div class="list">
+            <ul class="flow">
+                <li>one</li>
+                <li>two</li>
+                <li>three</li>
+                <li>four</li>
+                <li>five</li>
+            </ul>
+        </div>
 
         <section id="colors">
 
