--- a/design-system.html
+++ b/design-system.html
@@ -92,10 +92,18 @@
                 <h2 class="numbered-title"><span>03</span> Interactive elements</h2>
                 
                 <!-- navigation -->
-                <div></div>
+                <div>
+                    <nav>
+                        <ul class="primary-navigation underline-indicators flex">
+                            <li class="active"><a class="uppercase text-white letter-spacing-2" href="#"><span>01</span>Active</a>
+                            <li><a class="uppercase text-white letter-spacing-2" href="#"><span>02</span>Hovered</a>
+                            <li><a class="uppercase text-white letter-spacing-2" href="#"><span>03</span>Idle</a>
+                        </ul>
+                    </nav>
+                </div>
                 
                 <div class="flex">
-                    <div>
+                    <div style="margin-top: 5rem">
                         <!-- explore button -->
                         <a href="#" class="large-button uppercase ff-serif fs-600 text-dark bg-white">Explore</a>
                     </div>
