--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <script src="app.js" defer></script>
   </head>
   <body class="home">
+    <a class="skip-to-content" href="#main">Skip to content</a>
     <header class="primary-header flex">
       <div>
         <img
@@ -51,35 +52,38 @@
             <a
               class="ff-sans-cond uppercase text-white letter-spacing-2"
               href="index.html"
-              ><span>00</span>Home</a
+            >
+              <!-- aria-hidden="true" is so that screen readers don't read the "00" on these spans
+              as they are just their for decorative/style purposes -->
+              <span aria-hidden="true">00</span>Home</a
             >
           </li>
           <li>
             <a
               class="ff-sans-cond uppercase text-white letter-spacing-2"
               href="destination.html"
-              ><span>01</span>Destination</a
+              ><span aria-hidden="true">01</span>Destination</a
             >
           </li>
           <li>
             <a
               class="ff-sans-cond uppercase text-white letter-spacing-2"
               href="crew.html"
-              ><span>02</span>Crew</a
+              ><span aria-hidden="true">02</span>Crew</a
             >
           </li>
           <li>
             <a
               class="ff-sans-cond uppercase text-white letter-spacing-2"
               href="technology.html"
-              ><span>03</span>Technology</a
+              ><span aria-hidden="true">03</span>Technology</a
             >
           </li>
         </ul>
       </nav>
     </header>
 
-    <div class="grid-container grid-container--home">
+    <main id="main" class="grid-container grid-container--home">
       <div>
         <h1 class="text-accent fs-500 ff-sans-cond uppercase letter-spacing-1">
           So, you want to travel to
@@ -100,6 +104,6 @@
           >Explore</a
         >
       </div>
-    </div>
+    </main>
   </body>
 </html>
