crew styling and fixing up small design issues on all pages

--- a/destination-moon.html
+++ b/destination-moon.html
@@ -89,32 +89,29 @@
       </h1>
       <img src="assets/destination/image-moon.png" alt="the moon" />
       <div class="tab-list underline-indicators flex">
-        <button
-          aria-selected="true"
-          class="uppercase ff-sans-cond text-accent bg-dark"
-        >
+        <button aria-selected="true" class="uppercase ff-sans-cond text-accent">
           Moon
         </button>
         <button
           aria-selected="false"
-          class="uppercase ff-sans-cond text-accent bg-dark"
+          class="uppercase ff-sans-cond text-accent"
         >
           Mars
         </button>
         <button
           aria-selected="false"
-          class="uppercase ff-sans-cond text-accent bg-dark"
+          class="uppercase ff-sans-cond text-accent"
         >
           Europa
         </button>
         <button
           aria-selected="false"
-          class="uppercase ff-sans-cond text-accent bg-dark"
+          class="uppercase ff-sans-cond text-accent"
         >
           Titan
         </button>
       </div>
-      <article class="destination-info">
+      <article class="destination-info flow">
         <h2 class="fs-800 uppercase ff-serif">Moon</h2>
         <p>
           See our planet as you've never seen it before. A perfect relaxing trip
