--- a/crew.html
+++ b/crew.html
@@ -92,9 +92,11 @@
           <span class="sr-only">The Crew Engineer</span>
         </button>
       </div>
-      <article class="crew-details">
-        <h2 class="fs-600 ff-serif uppercase">Commander</h2>
-        <p class="fs-700 uppercase ff-serif">Douglas Hurley</p>
+      <article class="crew-details flow flow--space-large">
+        <header class="flow flow--space-small">
+          <h2 class="fs-600 ff-serif uppercase">Commander</h2>
+          <p class="fs-700 uppercase ff-serif">Douglas Hurley</p>
+        </header>
         <p>
           Douglas Gerald Hurley is an American engineer, former Marine Corps
           pilot and former NASA astronaut. He launched into space for the third
