--- a/destination.html
+++ b/destination.html
@@ -20,7 +20,7 @@
     />
 
     <title>Space Tourism</title>
-    <script src="app.js" defer></script>
+    <script src="app.js" type="module" defer></script>
   </head>
   <body class="destination">
     <a class="skip-to-content" href="#main">Skip to content</a>
@@ -88,59 +88,48 @@
         <span aria-hidden="true">01</span> Pick your destination
       </h1>
       <picture>
-        <source srcset="assets/destination/image-moon.webp" type="image/webp" />
-        <img src="assets/destination/image-moon.png" alt="the moon" />
-      </picture>
-      <picture hidden>
-        <source srcset="assets/destination/image-mars.webp" type="image/webp" />
-        <img src="assets/destination/image-mars.png" alt="the planet mars" />
-      </picture>
-      <picture hidden>
         <source
-          srcset="assets/destination/image-europa.webp"
+          class="locationPicture"
+          srcset="assets/destination/image-moon.webp"
           type="image/webp"
         />
         <img
-          src="assets/destination/image-europa.png"
-          alt="the planet europa"
+          class="locationImg"
+          src="./assets/destination/image-moon.png"
+          alt="the moon"
         />
       </picture>
-      <picture hidden>
-        <source
-          srcset="assets/destination/image-titan.webp"
-          type="image/webp"
-        />
-        <img src="assets/destination/image-titan.png" alt="the moon titan" />
-      </picture>
-
       <div class="tab-list underline-indicators flex">
-        <button aria-selected="true" class="uppercase ff-sans-cond text-accent">
+        <button
+          aria-selected="true"
+          class="uppercase ff-sans-cond text-accent moonButton"
+        >
           Moon
         </button>
         <button
           aria-selected="false"
-          class="uppercase ff-sans-cond text-accent"
+          class="uppercase ff-sans-cond text-accent marsButton"
         >
           Mars
         </button>
         <button
           aria-selected="false"
-          class="uppercase ff-sans-cond text-accent"
+          class="uppercase ff-sans-cond text-accent europaButton"
         >
           Europa
         </button>
         <button
           aria-selected="false"
-          class="uppercase ff-sans-cond text-accent"
+          class="uppercase ff-sans-cond text-accent titanButton"
         >
           Titan
         </button>
       </div>
       <!-- The moon -->
       <article class="destination-info flow">
-        <h2 class="fs-800 uppercase ff-serif">Moon</h2>
+        <h2 class="fs-800 uppercase ff-serif locationName">Moon</h2>
 
-        <p>
+        <p class="locationDescription">
           See our planet as you've never seen it before. A perfect relaxing trip
           away to help regain perspective and come back refreshed. While you're
           there, take in some history by visiting the Luna 2 and Apollo 11
@@ -150,11 +139,11 @@
         <div class="destination-meta flex">
           <div>
             <h3 class="text-accent fs-200 uppercase">Avg. distance</h3>
-            <p class="ff-serif uppercase">384,400 km</p>
+            <p class="ff-serif uppercase locationDistance">384,400 km</p>
           </div>
           <div>
             <h3 class="text-accent fs-200 uppercase">Est. travel time</h3>
-            <p class="ff-serif uppercase">3 days</p>
+            <p class="ff-serif uppercase locationTravel">3 days</p>
           </div>
         </div>
       </article>
