--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     />
 
     <title>Space Tourism</title>
-    <script src="app.js" defer></script>
+    <script type="module" src="app.js" defer></script>
   </head>
   <body class="home">
     <a class="skip-to-content" href="#main">Skip to content</a>
