--- a/crew.html
+++ b/crew.html
@@ -21,6 +21,7 @@
 
     <title>Space Tourism</title>
     <script src="app.js" defer></script>
+    <script src="dots.js" type="module" defer></script>
   </head>
 
   <body class="crew">
@@ -78,26 +79,65 @@
       <h1 class="numbered-title">
         <span aria-hidden="true">02</span> Meet your crew
       </h1>
-      <div class="dot-indicators flex">
-        <button aria-selected="true">
+
+      <div
+        class="dot-indicators flex"
+        role="tablist"
+        aria-label="crew member list"
+      >
+        <button
+          aria-selected="true"
+          aria-controls="commander-tab"
+          data-image="commander image"
+          data-tab-Panel="commander"
+          role="tab"
+          tabindex="0"
+        >
           <span class="sr-only">The Commander</span>
         </button>
-        <button aria-selected="false">
+        <button
+          aria-selected="false"
+          aria-controls="specialist-tab"
+          data-image="specialist-image"
+          data-tab-Panel="specialist"
+          role="tab"
+          tabindex="-1"
+        >
           <span class="sr-only">The Mission Specialist</span>
         </button>
-        <button aria-selected="false">
+        <button
+          aria-selected="false"
+          aria-controls="pilot-tab"
+          data-image="pilot-image"
+          data-tab-Panel="pilot"
+          role="tab"
+          tabindex="-1"
+        >
           <span class="sr-only">The Pilot</span>
         </button>
-        <button aria-selected="false">
+        <button
+          aria-selected="false"
+          aria-controls="engineer-tab"
+          data-image="engineer-image"
+          data-tab-Panel="engineer"
+          role="tab"
+          tabindex="-1"
+        >
           <span class="sr-only">The Crew Engineer</span>
         </button>
       </div>
-      <article class="crew-details flow flow--space-large">
+
+      <article
+        class="crew-details flow flow--space-large"
+        id="commander-tab"
+        role="tabpanel"
+        tabindex="0"
+      >
         <header class="flow flow--space-small">
-          <h2 class="fs-600 ff-serif uppercase">Commander</h2>
-          <p class="fs-700 uppercase ff-serif">Douglas Hurley</p>
+          <h2 class="fs-600 ff-serif uppercase crewRole">Commander</h2>
+          <p class="fs-700 uppercase ff-serif crewName">Douglas Hurley</p>
         </header>
-        <p>
+        <p class="crewBio">
           Douglas Gerald Hurley is an American engineer, former Marine Corps
           pilot and former NASA astronaut. He launched into space for the third
           time as commander of Crew Dragon Demo-2.
@@ -106,10 +146,15 @@
       <picture>
         <!-- browser will use the png by default, but can use the webp (smaller) when it is supported -->
         <source
+          class="crewPicture"
           srcset="assets/crew/image-douglas-hurley.png"
           type="image/webp"
         />
-        <img src="assets/crew/image-douglas-hurley.png" alt="Douglas Hurley" />
+        <img
+          class="crewImage"
+          src="assets/crew/image-douglas-hurley.png"
+          alt="Douglas Hurley"
+        />
       </picture>
     </main>
   </body>
