cleaning up a few css issues

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div>
         <a
           id="test"
-          href="#"
+          href="destination.html"
           class="large-button uppercase ff-serif fs-600 text-dark bg-white"
           >Explore</a
         >
