--- a/destination.html
+++ b/destination.html
@@ -145,7 +145,7 @@
       <article class="destination-info flow">
         <h2 class="fs-800 uppercase ff-serif locationName">Moon</h2>
 
-        <p class="locationDescription">
+        <p class="locationDescription text-accent">
           See our planet as you've never seen it before. A perfect relaxing trip
           away to help regain perspective and come back refreshed. While you're
           there, take in some history by visiting the Luna 2 and Apollo 11
